# live-glsl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  shell.html
.github/workflows/: main.yml
examples/: atmosphere.frag  clouds.frag  dithering.frag  fake_cubemap.frag  fog.frag  include.frag  palette.frag  rt_sphere.frag  simple.frag  sound_visu.frag  sound_visu1.frag  sound_visu2.frag  stars-psf.frag  stars-psf2.frag  stars.frag
lib/fontstash/: fontstash.h
lib/include/fmod/: fmod.h
lib/include/fontstash/: glfontstash.h
lib/precompiled/: libfmodex.dylib
ogl/: CMakeLists.txt  shader.cpp  shader.h
ogl/include/: bufferattribute.h  oglmath.h  shader.h
ogl/src/: shader.cpp
shaders/: ao.py  clouds.frag  fog.frag  heightfield.frag  heightfield.ini  mouse.frag  plasma.frag  plot.frag  simple.frag  simple.ini  stars.frag  terrain_fog.frag
src/: app.cpp  app.h  arguments.cpp  arguments.h  arial.ttf.h  default_vert.h  defines.h  filewatcher.cpp  filewatcher.h  fragtool.cpp  fragtool.h  graphics.h  gui.cpp  gui.h  liveglsl.cpp  liveglsl.h  log.cpp  log.h  main.cpp  quad.h  renderpass.cpp  renderpass.h  screenlog.cpp  screenlog.h  shader.cpp  shader.h  shaderparser.cpp  shaderparser.h  utils.cpp  utils.h
tests/: liveglsl_tests.cpp  shader0.frag  shader1.frag  shader2.frag
